add terminator e remove google cloud

--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -22,6 +22,7 @@
           - gnupg
           - python3-pip
           - make
+          - terminator
           - git
           - bash-completion
           - gnupg-agent
@@ -115,24 +116,6 @@
           dest: /usr/local/bin/stern
           mode: 755
           remote_src: yes
-
-    - block:
-      - name: Install Google Cloud SDK Key
-        become: true
-        apt_key:
-          url: 'https://packages.cloud.google.com/apt/doc/apt-key.gpg'
-          state: present
-      - name: Install Google Cloud SDK Repository
-        become: true
-        apt_repository:
-          repo: 'deb [arch=amd64] https://packages.cloud.google.com/apt cloud-sdk main'
-          state: present
-          filename: google-cloud-sdk
-      - name: Install Google Cloud SDK
-        become: true
-        apt:
-          name: google-cloud-sdk
-
           
     - block:
       - name: Install Microsoft Key
