--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -123,6 +123,32 @@
           - ms-azuretools.vscode-docker
           - bbenoist.vagrant
           - hashicorp.terraform
+    - block:      
+      - name: Install prerequisites for Docker repository
+        apt:
+        name: ['apt-transport-https', 'ca-certificates', 'curl', 'gnupg2', 'software-properties-common']
+        update_cache: yes
+
+      - name: Add Docker GPG key
+        apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+
+      - name: Add Docker APT repository
+        apt_repository:
+        repo: deb [arch=amd64] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable
+
+      - name: Install Docker CE
+        apt:
+        name: ['docker-ce', 'docker-ce-cli', 'containerd.io']
+        update_cache: yes
+
+      - name: Install prerequisites for docker-compose
+        apt:
+        name: ['python3-pip', 'python3-setuptools', 'virtualenv']
+
+      - name: Install docker-compose
+        pip:
+        name: docker-compose      
 
     - block:
       - name: Installing Kubectl 1.21.0
