--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -124,31 +124,28 @@
           - bbenoist.vagrant
           - hashicorp.terraform
     - block:      
-      - name: Install prerequisites for Docker repository
-        apt:
-        name: ['apt-transport-https', 'ca-certificates', 'curl', 'gnupg2', 'software-properties-common']
-        update_cache: yes
+      - hosts: all
+        tasks:
+        - name: Add Docker GPG key
+          apt_key: url=https://download.docker.com/linux/ubuntu/gpg
 
-      - name: Add Docker GPG key
-        apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
+        - name: Install basic list of packages
+          apt:
+            name: ['apt-transport-https','ca-certificates','curl','gnupg2','software-properties-common']
+            state: present
+            update_cache: yes
 
-      - name: Add Docker APT repository
-        apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable
+        - name: Add Docker APT repository
+          apt_repository:
+            repo: deb [arch=amd64] https://download.docker.com/linux/{{ansible_distribution|lower}} {{ansible_distribution_release}} stable
 
-      - name: Install Docker CE
-        apt:
-        name: ['docker-ce', 'docker-ce-cli', 'containerd.io']
-        update_cache: yes
+        - name: Install Docker packages
+          apt:
+            name: ['docker-ce','docker-ce-cli','containerd.io']
+            state: present
 
-      - name: Install prerequisites for docker-compose
-        apt:
-        name: ['python3-pip', 'python3-setuptools', 'virtualenv']
-
-      - name: Install docker-compose
-        pip:
-        name: docker-compose      
+        - name: Install Docker-compose 
+          shell: curl -L "https://github.com/docker/compose/releases/download/1.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
 
     - block:
       - name: Installing Kubectl 1.21.0
