--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -110,6 +110,7 @@
           repo: 'deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable'
           state: present
           filename: docker-ce
+          update_cache: true
       - name: Install Docker
         become: true
         apt:
