--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -102,15 +102,16 @@
       - name: Install Docker Key
         become: true
         apt_key:
+        apt: update_cache=yes
           url: 'https://download.docker.com/linux/ubuntu/gpg'
           state: present
       - name: Install Docker Repository
         become: true
+        apt: update_cache=yes
         apt_repository:
           repo: 'deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable'
           state: present
-          filename: docker-ce
-          update_cache: true
+          filename: docker-ce        
       - name: Install Docker
         become: true
         apt:
