add docker install teste 8

--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -99,19 +99,20 @@
           remote_src: yes
           
     - block: 
+      - name: Run apt
+        apt: 
+          update_cache: yes
       - name: Install Docker Key
         become: true
         apt_key:          
           url: 'https://download.docker.com/linux/ubuntu/gpg'
-          state: present
-          apt: update_cache=yes
+          state: present          
       - name: Install Docker Repository
         become: true        
         apt_repository:
           repo: 'deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable'
           state: present
-          filename: docker-ce 
-          apt: update_cache=yes       
+          filename: docker-ce                  
       - name: Install Docker
         become: true
         apt:
