--- a/docker.yml
+++ b/docker.yml
@@ -25,3 +25,11 @@
           - name: Install Docker Module for Python 
             pip: 
                     name: docker
+
+           - name: Install prerequisites for docker-compose
+            apt:
+              name: ['python3-pip', 'python3-setuptools', 'virtualenv']
+
+          - name: Install docker-compose
+            pip:
+                    name: docker-compose
