--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -97,6 +97,34 @@
           dest: /usr/local/bin/stern
           mode: 755
           remote_src: yes
+
+    - block:
+      - name: Install Microsoft Key
+        become: true
+        apt_key:
+          url: 'https://packages.microsoft.com/keys/microsoft.asc'
+          state: present
+      - name: Install VSCode Repository
+        become: true
+        apt_repository:
+          repo: 'deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main'
+          state: present
+          filename: vscode
+      - name: Install Visual Studio Code
+        become: true
+        apt:
+          name: code
+      - name: Install Virtual Studio Code Extensions
+        shell:
+          cmd: code --install-extension '{{ item }}' 
+        loop: 
+          - ms-python.python
+          - ms-azuretools.vscode-docker
+          - bbenoist.vagrant
+          - hashicorp.terraform
+          - gruntfuggly.todo-tree
+          - njpwerner.autodocstring
+          - eamodio.gitlens      
           
     - block:
       - name: Installing Kubectl 1.21.0
