--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -36,6 +36,7 @@
           - slack
           - telegram-desktop
           - jq
+          - kazam
 
     - block:
       - name: Installing AWS CLI via pip3
