--- a/vagrant.yml
+++ b/vagrant.yml
@@ -17,7 +17,7 @@
 
         - name: Add HashiCorp repository
           ansible.builtin.apt_repository:
-            repo: 'deb [arch=amd64] https://apt.releases.hashicorp.com focal main'
+            repo: "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
             state: present
             folename: hashicorp
 
